--- a/example/index.html
+++ b/example/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>vue-renderless-component</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
 
-<head>
-  <title>起步</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="bundle.js"></script>
-</body>
-
+    <body>
+        <div id="app"></div>
+        <script src="bundle.js"></script>
+    </body>
 </html>
